# dotfiles

./: .gitignore  TODO  apply-home.sh  apply-system.sh  apply.sh  flake.nix  justfile  manual.md  pre-commit.nix  update.sh
home-manager/: home.nix  packages.nix  try_these.md  zsh.nix
home-manager/config/: user-dirs.dirs
home-manager/gnome/: dconf.nix  dconf_settings.helper  gnome.nix
home-manager/hosts/: default.nix
home-manager/zsh/: .zshrc  functions.zsh  p10k.zsh  zsh.nix  zshrc  zshrc_og
hosts/pendlive/: default.nix
junk/: .zshrc  dconf_settings  dconf_settings_2  manjaro-zsh-config
junk/vscode_config/: extensions_list.txt
junk/vscode_config/user_data/: keybindings.json
junk/vscode_config/user_data/History/-100cc70/: entries.json
junk/vscode_config/user_data/History/-102d1965/: 3vT8  42AI  5CxB  5p3M  61va  7foN  CBXJ  D0jU  G57C  IFp1  IwtG  J9aI  NCNf  O1rh  ORG1  OYQH  Oznv  PiyG  Qd0f  RCgj  T9xP  Tzor  WB0L  XFsA  ZPV4  acFE  bG6m  bfo0  entries.json  gU4b  h4p4  hTRh  koTR  lGS4  mLsU  mRcZ  oJHj  oaRl  oss1  p3ih  (+5 more)
junk/vscode_config/user_data/History/-102f0270/: entries.json  ojSL.hs  q329.hs
junk/vscode_config/user_data/History/-10a03e81/: WoGD.hs  entries.json
junk/vscode_config/user_data/History/-10f80543/: 6DiI.js  9aui.js  RXYk.js  ZpbY.js  entries.json  flmk.js  tHj6.js
junk/vscode_config/user_data/History/-11436b73/: entries.json
junk/vscode_config/user_data/History/-114942ab/: 1C4t.nix  4tf9.nix  5jlJ.nix  6ZTP.nix  A3Sl.nix  DDvR.nix  ElWo.nix  FkQu.nix  G3ao.nix  GTSn.nix  Hj5b.nix  I2f8.nix  IoaQ.nix  LaD7.nix  M5Cp.nix  MhLz.nix  Nn9n.nix  OJTY.nix  Pf54.nix  Qk1X.nix  Rg6a.nix  TPKp.nix  U30s.nix  U8VI.nix  WxD5.nix  Y1L8.nix  Y5Bs.nix  Ym20.nix  ZTGO.nix  bDrY.nix  eeH6.nix  entries.json  fAag.nix  h5Jj.nix  ijqD.nix  kP1k.nix  mfX3.nix  niUA.nix  qeSX.nix  rLgH.nix  (+7 more)
junk/vscode_config/user_data/History/-1165a2b5/: 2ZyD.md  6HpV.md  8YHP.md  8iDA.md  Ac3S.md  Autn.md  ClnH.md  EVm2.md  FmUF.md  GaX6.md  HANk.md  Jj5V.md  Jmfm.md  L4Op.md  MXcV.md  N4SL.md  P38P.md  RMsz.md  VmrS.md  YT7k.md  YspQ.md  YwJ6.md  entries.json  hl13.md  i3av.md  iggA.md  k2QL.md  kuui.md  lfU9.md  m73a.md  qOKv.md  qp6A.md  wBQY.md  wL5T.md  xEvw.md  xnIw.md
junk/vscode_config/user_data/History/-117b4ea4/: entries.json
junk/vscode_config/user_data/History/-11cbfe64/: 2A76.hs  5kf7.hs  7fpH.hs  Aduj.hs  CY9T.hs  DFKA.hs  F72P.hs  GWET.hs  IfUE.hs  J4oX.hs  K87o.hs  L2I7.hs  NFwQ.hs  NqxZ.hs  NwZE.hs  PDqU.hs  SPoB.hs  So5a.hs  UO6i.hs  ZR6P.hs  ZfIT.hs  daYX.hs  e2ks.hs  eXnZ.hs  entries.json  fv2Z.hs  h9H7.hs  lDWm.hs  lLNv.hs  lgjH.hs  qHlI.hs  rdus.hs  v0gl.hs  vCRW.hs  vXF5.hs  xPHS.hs
junk/vscode_config/user_data/History/-11ebd184/: VhfN.hs  aNDX.hs  entries.json  hP42.hs  kv38.hs
junk/vscode_config/user_data/History/-124e429a/: 29OH.json  2vpK.json  C8iH.json  UJAZ.json  W2Qx.json  entries.json  jPYN.json  (+4 more)
junk/vscode_config/user_data/History/42173cb6/: 05as.cabal  3zDi.cabal  5ByL.cabal  7RDj.cabal  DPl0.cabal  DlKn.cabal  ET93.cabal  HWNr.cabal  LOj7.cabal  MOR8.cabal  NZzZ.cabal  OEJP.cabal  P6F7.cabal  QHLC.cabal  SFtN.cabal  T15e.cabal  WhfG.cabal  YC1I.cabal  YQ5l.cabal  entries.json  fhhc.cabal  gPDf.cabal  gqQf.cabal  iZWH.cabal  noHi.cabal  q4iR.cabal  qTiE.cabal  qiuT.cabal  t0k8.cabal  tOap.cabal  vmz5.cabal  wBep.cabal  wZT9.cabal  wiV8.cabal  zBJE.cabal
junk/vscode_config/user_data/History/45f7889c/: 21Io.cabal  4jRZ.cabal  COyo.cabal  DXUH.cabal  Deea.cabal  H17P.cabal  HnK2.cabal  LfGh.cabal  MLIK.cabal  N6fa.cabal  YcRe.cabal  Z73d.cabal  ZjSK.cabal  cH8G.cabal  cTWr.cabal  ckQA.cabal  entries.json  iyhl.cabal  jFhK.cabal  kYyq.cabal  nvbe.cabal  nwLI.cabal  pSm6.cabal  sBuh.cabal  waom.cabal
junk/vscode_config/user_data/History/78f37dba/: 19we.cabal  1eHK.cabal  1lvI.cabal  5bpx.cabal  DxvQ.cabal  G0o9.cabal  Jjl2.cabal  PDoG.cabal  aFsb.cabal  entries.json  fyi7.cabal  jLXd.cabal  sUZp.cabal
junk/vscode_config/user_data/globalStorage/: state.vscdb  storage.json
junk/vscode_config/user_data/snippets/: C_CPP.code-snippets  tex.code-snippets
lib/: default.nix
modules/: username.nix  usernames.nix
nixos/: audio.nix  barplus-hardware.nix  configuration.nix  general.nix  hardware-configuration.nix  omen-extra.nix  omen-hardware.nix  sed.nix  virtualization.nix
nixos/etc/: user-dirs.defaults  zshrc
nixos/hardware/: framework.nix  framework_hardware.nix  hp.nix  sda-omen.nix
nixos/hosts/: barplus.nix  framework.nix  omen.nix  pendlive.nix  sda-omen.nix
pkgs/: default.nix
(+12041 files in other folders)
