cabal-version: 3.6
--
-- see: https://github.com/sol/hpack

name:           hsh
version:        0.0.2
build-type:     Simple

library
  exposed-modules:
      Hsh.Constructors
      Hsh.Main
  other-modules:
      Paths_hsh
  hs-source-dirs:
      src
  build-depends:
      base
    , containers
    , extra
    , hint
    , pretty-simple
    , turtle >=1.6.1
  default-language: Haskell2010

executable hsh
  main-is: Hsh/Main.hs
  other-modules:
      Constructors
      Paths_hsh
  hs-source-dirs:
      src
  build-depends:
      base
    , containers
    , extra
    , hint
    , pretty-simple
    , turtle >=1.6.1
  default-language: Haskell2010
